--- a/app/src/main/res/layout/activity_post_list.xml
+++ b/app/src/main/res/layout/activity_post_list.xml
@@ -5,11 +5,83 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Adapter.PostListActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="73dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/image" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="226dp"
+                android:layout_height="37dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:fadingEdge="none"
+                android:fontFamily="monospace"
+                android:gravity="center_horizontal"
+                android:paddingTop="4dp"
+                android:text="Chenstagram"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:textStyle="normal"
+                app:fontFamily="serif-monospace" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerView"/>
+        android:layout_height="273dp"
+        android:layout_weight="1" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/opencambtn"
+            android:layout_width="277dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:backgroundTint="#3E5AA3"
+            android:text="Open Camera"
+            android:textColor="@android:color/white"
+            android:textSize="22sp"
+            android:typeface="monospace" />
+
+        <Button
+            android:id="@+id/signoutbtn"
+            android:layout_width="127dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@color/colorAccent"
+            android:text="Signout"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
+            android:textSize="22sp"
+            android:typeface="monospace" />
+
+    </LinearLayout>
+
 </LinearLayout>
+
+
+
